force-app/main/default/objects/Portal_User__c/Portal_User__c.object-meta.xml
<CustomObject>
    <label>Portal User</label>
    <nameField>
        <label>Portal User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>