force-app/main/default/objects/Portal_User__c/fields/adgroup__c.field-meta.xml
<CustomField>
    <fullName>adgroup__c</fullName>
    <label>adgroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>