force-app/main/default/objects/Portal_User__c/fields/adid__c.field-meta.xml
<CustomField>
    <fullName>adid__c</fullName>
    <label>adid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>