force-app/main/default/objects/Portal_User__c/fields/Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone__c</fullName>
    <label>Business Phone Number</label>
    <type>Phone</type>
</CustomField>