force-app/main/default/objects/Portal_User__c/fields/Business_Phone_Number_Short__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone_Number_Short__c</fullName>
    <description>Created by John Chalovich. Required by Mercury SMS to allow inbound SMS text to be mapped to correct record.</description>
    <formula>SUBSTITUTE(	SUBSTITUTE(	SUBSTITUTE(	SUBSTITUTE(	
SUBSTITUTE(	 Business_Phone__c ,	&apos;+&apos;,	&apos;&apos;),	&apos;)&apos;,	&apos;&apos;),	&apos;(&apos;,	&apos;&apos;),	&apos;-&apos;,	&apos;&apos;),	&apos;	&apos;,	&apos;&apos;)</formula>
    <label>Business Phone Number Short</label>
    <type>Text</type>
</CustomField>