force-app/main/default/objects/Portal_User__c/fields/Business_URL__c.field-meta.xml
<CustomField>
    <fullName>Business_URL__c</fullName>
    <label>Business URL</label>
    <type>Url</type>
</CustomField>