force-app/main/default/objects/Portal_User__c/fields/ButtonCheck__c.field-meta.xml
<CustomField>
    <fullName>ButtonCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in LoginController for forget password sending mail</description>
    <label>Send Mail for forget password</label>
    <type>Checkbox</type>
</CustomField>