force-app/main/default/objects/Portal_User__c/fields/campaign__c.field-meta.xml
<CustomField>
    <fullName>campaign__c</fullName>
    <label>campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>