force-app/main/default/objects/Portal_User__c/fields/Confirm_Password__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Password__c</fullName>
    <label>Confirm Password</label>
    <length>30</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>