force-app/main/default/objects/Portal_User__c/fields/Create_a_Password__c.field-meta.xml
<CustomField>
    <fullName>Create_a_Password__c</fullName>
    <label>Create a Password1</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>