force-app/main/default/objects/Portal_User__c/fields/Do_you_sell_product_or_service_free__c.field-meta.xml
<CustomField>
    <fullName>Do_you_sell_product_or_service_free__c</fullName>
    <label>Do you sell  product or service free?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>