force-app/main/default/objects/Portal_User__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Please enter the email id</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>