force-app/main/default/objects/Portal_User__c/fields/Forget_Password_Security_question__c.field-meta.xml
<CustomField>
    <fullName>Forget_Password_Security_question__c</fullName>
    <label>Forget Password Security question</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Last 4 Digit of your Social Security</fullName>
            </value>
            <value>
                <fullName>What is the name of the first person you kissed?</fullName>
            </value>
            <value>
                <fullName>What is the name of the high school you graduated from?</fullName>
            </value>
            <value>
                <fullName>What is your father&apos;s middle name?</fullName>
            </value>
            <value>
                <fullName>What is your Mother&apos;s Maiden name?</fullName>
            </value>
            <value>
                <fullName>What street did you grow up on?</fullName>
            </value>
            <value>
                <fullName>What was the make of your first car?</fullName>
            </value>
            <value>
                <fullName>Who did you take to prom?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>