force-app/main/default/objects/Portal_User__c/fields/How_did_you_find_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_find_us__c</fullName>
    <description>used on sign up page on bank portal site</description>
    <label>How did you find us</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google Ad</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Search Engine</fullName>
            </value>
            <value>
                <fullName>FAFSCorp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>