force-app/main/default/objects/Portal_User__c/fields/Lead_Form_Abandon__c.field-meta.xml
<CustomField>
    <fullName>Lead_Form_Abandon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Form Abandon</label>
    <type>Checkbox</type>
</CustomField>