force-app/main/default/objects/Portal_User__c/fields/network__c.field-meta.xml
<CustomField>
    <fullName>network__c</fullName>
    <label>network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>