force-app/main/default/objects/Portal_User__c/fields/offer__c.field-meta.xml
<CustomField>
    <fullName>offer__c</fullName>
    <label>offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>