force-app/main/default/objects/Portal_User__c/fields/Other_Industry_exist__c.field-meta.xml
<CustomField>
    <fullName>Other_Industry_exist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when other industry field exist any value.</description>
    <label>Other Industry exist</label>
    <type>Checkbox</type>
</CustomField>