force-app/main/default/objects/Portal_User__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Mobile Phone Number</label>
    <type>Phone</type>
</CustomField>