force-app/main/default/objects/Portal_User__c/fields/Prospect_Industry__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Industry__c</fullName>
    <label>Prospect Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>