force-app/main/default/objects/Portal_User__c/fields/Service_is_not_provided__c.field-meta.xml
<CustomField>
    <fullName>Service_is_not_provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Industry for which service is not provided</description>
    <label>Service is not provided</label>
    <type>Checkbox</type>
</CustomField>