force-app/main/default/objects/Portal_User__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Session</label>
    <type>Checkbox</type>
</CustomField>