force-app/main/default/objects/Portal_User__c/fields/Subscribed_for_email_alert__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_for_email_alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscribed for email alert</label>
    <type>Checkbox</type>
</CustomField>