force-app/main/default/objects/Portal_User__c/fields/term__c.field-meta.xml
<CustomField>
    <fullName>term__c</fullName>
    <label>term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>