force-app/main/default/objects/Portal_User__c/fields/Update_Password__c.field-meta.xml
<CustomField>
    <fullName>Update_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for sending mail on change password Successfully</description>
    <label>Update Password</label>
    <type>Checkbox</type>
</CustomField>