force-app/main/default/objects/Portal_User__c/fields/UpdateParentWithoutChild__c.field-meta.xml
<CustomField>
    <fullName>UpdateParentWithoutChild__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for sending mail when the user have no leads</description>
    <label>UpdateParentWithoutChild</label>
    <type>Checkbox</type>
</CustomField>