force-app/main/default/objects/Portal_User__c/fields/What_is_your_Industry__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_Industry__c</fullName>
    <label>What is your Industry?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting and Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Adoption Agencies</fullName>
            </value>
            <value>
                <fullName>Adult Content</fullName>
            </value>
            <value>
                <fullName>Adult Products</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Alcohol (Wholesale Online)</fullName>
            </value>
            <value>
                <fullName>Ammunition</fullName>
            </value>
            <value>
                <fullName>Asset Protection</fullName>
            </value>
            <value>
                <fullName>Audiotext</fullName>
            </value>
            <value>
                <fullName>Auto Detailing</fullName>
            </value>
            <value>
                <fullName>Auto Rental Agencies</fullName>
            </value>
            <value>
                <fullName>Auto Roadside Assistance</fullName>
            </value>
            <value>
                <fullName>Auto Transport</fullName>
            </value>
            <value>
                <fullName>Autoparts Online</fullName>
            </value>
            <value>
                <fullName>Background Checks</fullName>
            </value>
            <value>
                <fullName>Bail Bond Services</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Lawyer / Firm</fullName>
            </value>
            <value>
                <fullName>Bartering Services</fullName>
            </value>
            <value>
                <fullName>Binary Options Trading</fullName>
            </value>
            <value>
                <fullName>Bitcoin</fullName>
            </value>
            <value>
                <fullName>Bitcoin ATM</fullName>
            </value>
            <value>
                <fullName>Bus Lines</fullName>
            </value>
            <value>
                <fullName>Business Consulting</fullName>
            </value>
            <value>
                <fullName>Business Opportunity</fullName>
            </value>
            <value>
                <fullName>Botanicals</fullName>
            </value>
            <value>
                <fullName>Cannabis Seeds</fullName>
            </value>
            <value>
                <fullName>Car / Limo Service</fullName>
            </value>
            <value>
                <fullName>Cash Gifting</fullName>
            </value>
            <value>
                <fullName>Casino, Gambling, or Gaming Establishments</fullName>
            </value>
            <value>
                <fullName>CBD Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>