force-app/main/default/objects/Portal_User__c/fields/What_services_are_you_interested_in__c.field-meta.xml
<CustomField>
    <fullName>What_services_are_you_interested_in__c</fullName>
    <label>What services are you interested in?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merchant Processing</fullName>
            </value>
            <value>
                <fullName>Cash Advance</fullName>
            </value>
            <value>
                <fullName>eCheck</fullName>
            </value>
            <value>
                <fullName>Chargeback Shield</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>