force-app/main/default/objects/Portal_User__c/fields/Where_are_you_located__c.field-meta.xml
<CustomField>
    <fullName>Where_are_you_located__c</fullName>
    <label>Where are you located?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United States -Pacific</fullName>
            </value>
            <value>
                <fullName>United States-Mountain</fullName>
            </value>
            <value>
                <fullName>United States-Central</fullName>
            </value>
            <value>
                <fullName>United States-Eastern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>