force-app/main/default/objects/Portal_User__c/fields/X1_tab_is_not_completed_after_3_days__c.field-meta.xml
<CustomField>
    <fullName>X1_tab_is_not_completed_after_3_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1 tab is not completed after 3 days</label>
    <type>Checkbox</type>
</CustomField>