force-app/main/default/objects/Portal_User__c/fields/yesterday__c.field-meta.xml
<CustomField>
    <fullName>yesterday__c</fullName>
    <formula>CreatedDate-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>yesterday</label>
    <type>Date</type>
</CustomField>