force-app/main/default/objects/Portal_User__c/recordTypes/Portal_user.recordType-meta.xml
<RecordType>
    <fullName>Portal_user</fullName>
    <active>true</active>
    <label>Portal user</label>
</RecordType>