force-app/main/default/objects/Portal_User__c/recordTypes/Website_Prospect.recordType-meta.xml
<RecordType>
    <fullName>Website_Prospect</fullName>
    <active>true</active>
    <label>Website Prospect</label>
</RecordType>