force-app/main/default/objects/Portal_User__c/listViews/Portal_user.listView-meta.xml
<ListView>
    <fullName>Portal_user</fullName>
    <columns>CREATED_DATE</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Company_name__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Lead_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Portal_User__c.Portal_user</value>
    </filters>
    <label>Portal user</label>
</ListView>